updates examples and readme

--- a/e2e/index.html
+++ b/e2e/index.html
@@ -14,7 +14,9 @@
 <body class="container">
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">IBUSY</a>
+          <a class="navbar-brand" href="#">
+            <img src="./logo.png" width="200px" alt="">
+          </a>
         </div>
      
       </nav>
