--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             </tbody>
         </table>
     </div>
-    <script src="../dist/ibusy.js"></script>
-    <script src="./index.js"></script>
+    <script src="/ibusy.js"></script>
+    <script src="/index.js"></script>
 </body>
 
 </html>
