--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </tbody>
         </table>
     </div>
-    <script src="./ibusy.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ibusy@latest/dist/ibusy.js"></script>
     <script src="./index.js"></script>
 </body>
 
